<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login"
    tools:context=".LoginActivity"
    android:layout_weight="100">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_weight="5"
        android:id="@+id/login_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/my_primary"
        android:src="@drawable/login_logo" />

    <androidx.cardview.widget.CardView
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/login_TV"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_email_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:elevation="5dp"
                android:hint="@string/email_edt"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp" />

            <EditText
                android:id="@+id/login_password_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:elevation="5dp"
                android:gravity="start|center_vertical"
                android:hint="@string/password_ET"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_weight="5"
                android:text="@string/forgotpass_TV"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:layout_weight="60"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/login_ProgressBar"
            android:layout_width="32dp"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/my_primary"/>

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_design_background"
            android:text="@string/signin_BT"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_weight="70"
            android:id="@+id/txt_register_newAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/newUserRegisterHere_TV"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:layout_weight="70"
            android:id="@+id/language_choose_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/changeLanguage"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

</LinearLayout>