<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="100"
    tools:context=".UserRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="1"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="2"/>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_gravity="center"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/person_icon"
        app:tint="@color/my_primary"/>

    <androidx.cardview.widget.CardView
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="10"
            android:gravity="center"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/userRegister_name_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                android:hint="@string/name"
                android:inputType="text"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_weight="5"
                android:gravity="center"
                android:background="@drawable/border"
                android:elevation="5dp"
                android:layout_margin="10dp">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/register_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"/>

                <EditText
                    android:id="@+id/userRegister_mobile_edt"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobileNo_ET"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:background="@drawable/edit_text_rounded_corner" />

            </LinearLayout>

            <EditText
                android:id="@+id/userRegister_email_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                android:hint="@string/email_edt"
                android:inputType="textEmailAddress"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>

            <EditText
                android:id="@+id/userRegister_password_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                android:hint="@string/password_ET"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:layout_weight="80"
        android:orientation="vertical">

        <Button
            android:id="@+id/user_register_getOTP_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/getOTP"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@drawable/btn_design_background"/>
        <TextView
            android:id="@+id/txt_backto_loginAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/alreadyRegistered_TV"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

</LinearLayout>