<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/worker_register1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="100"
    tools:context=".WorkerRegistrationActivity1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="1"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="3"/>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_gravity="center"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/person_icon"
        app:tint="@color/my_primary"/>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center"
            android:padding="15dp">

            <EditText
                android:id="@+id/name_edit_worker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                android:hint="@string/name"
                android:inputType="text"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>

            <Spinner
                android:id="@+id/skill_select_worker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:elevation="5dp"/>

            <EditText
                android:id="@+id/landmark_edit_worker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                android:hint="@string/landmark"
                android:inputType="text"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>

            <EditText
                android:id="@+id/city_edit_worker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                android:hint="@string/city"
                android:inputType="text"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>

            <EditText
                android:id="@+id/state_edit_worker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                android:hint="@string/state"
                android:inputType="text"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:layout_weight="60"
        android:orientation="vertical">

        <Button
            android:id="@+id/wNext_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:background="@drawable/btn_design_background"/>
        <TextView
            android:id="@+id/wtxt_backto_loginAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/alreadyRegistered_TV"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>


</LinearLayout>