<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="30dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="270dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/registerFor"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_UserActivity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/my_primary"
                android:padding="12dp"
                android:text="@string/user"
                android:textSize="12sp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_WorkerActivity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="12dp"
                android:text="@string/worker"
                android:textColor="@color/my_primary"
                android:textSize="12sp"
                app:strokeColor="@color/my_primary"
                app:strokeWidth="2dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>