<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/forgot"
    tools:context=".ForgotPasswordActivity"
    android:layout_weight="100">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_weight="5"
        android:id="@+id/login_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/my_primary"
        android:src="@drawable/forgot_password" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/forgotpass_TV"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/forgot_email_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:elevation="5dp"
                android:hint="@string/email_edt"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:layout_weight="40"
        android:orientation="vertical">
        <Button
            android:id="@+id/get_forgot_link"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/getLink_BT"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@drawable/btn_design_background"/>
        <ProgressBar
            android:id="@+id/forgot_otp_progressBar"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/my_primary"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>