<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/worker_register2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="100"
    tools:context=".WorkerRegistrationActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="1"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="3"/>
        </RelativeLayout>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/worker_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/add_photo"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints"
        android:layout_weight="10"/>

    <androidx.cardview.widget.CardView
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="10"
            android:gravity="center"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:elevation="5dp"
                android:padding="10dp"
                android:layout_margin="10dp">

                <RadioGroup
                    android:id="@+id/info_gendergroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:layout_marginLeft="10dp"
                        android:textSize="16sp"/>

                    <RadioButton
                        android:id="@+id/info_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="M" />

                    <RadioButton
                        android:id="@+id/info_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="F" />

                    <RadioButton
                        android:id="@+id/info_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Other" />
                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/adharcard_edit_worker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                android:hint="Adhar Number"
                android:inputType="number"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_weight="5"
                android:gravity="center"
                android:background="@drawable/border"
                android:elevation="5dp"
                android:layout_margin="10dp">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/w_register_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"/>

                <EditText
                    android:id="@+id/wRegister_mobileNo_edt"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobileNo_ET"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_rounded_corner" />

            </LinearLayout>

            <EditText
                android:id="@+id/wRegister_dateofbirth_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="none"
                android:padding="16dp"
                android:layout_margin="10dp"
                android:hint="@string/dateofbirth"
                android:drawableRight="@drawable/calendar_today"
                android:background="@drawable/border"
                android:focusableInTouchMode="false"
                android:elevation="5dp"/>

            <EditText
                android:id="@+id/wRegister_emailid_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email_edt"
                android:padding="16dp"
                android:inputType="textEmailAddress"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>


            <EditText
                android:id="@+id/wRegister_password_edt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                android:hint="@string/password_ET"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:background="@drawable/border"
                android:elevation="5dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:layout_weight="60"
        android:orientation="vertical">

        <Button
            android:id="@+id/w_getOTP_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/getOTP"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:background="@drawable/btn_design_background"/>
    </LinearLayout>

</LinearLayout>